--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "@fastify/static": "^6.10.2",
     "@prisma/client": "^4.14.1",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.8",
     "fastify": "^4.17.0",
     "zod": "^3.21.4"
   }
